# Hackable43

./: README.md
AVRsleep/: AVRsleep.ino
DTMF_s63/: DTMF 1-B_Cu.gbr  DTMF 1-B_Mask.gbr  DTMF 1-B_SilkS.gbr  DTMF 1-Edge_Cuts.gbr  DTMF 1-F_Cu.gbr  DTMF 1-F_Mask.gbr  DTMF 1-F_SilkS.gbr  DTMF 1-NPTH.drl  DTMF 1-PTH.drl  DTMF 1-job.gbrjob
Pico_sleep2/: CMakeLists.txt  base.c
esp8266sleep/: esp8266sleep.ino
